<resources>
    <string name="app_name">CarousellKotlin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="long_text">This is a long text</string>
    <string name="item">item</string>
    <string name="no_text" />
    <string name="chat">Chat</string>
    <string name="like">Like</string>
    <string name="user">user</string>
    <string name="search_user_label">Search user instead</string>
    <string name="search_group_label">Search group instead</string>
    <string name="saved_searches">Saved Searches</string>
    <string name="manage">Manage</string>
    <string name="recent_searches">Recent searches</string>
    <string name="clear">Clear</string>
    <string name="search_hint">Search App</string>
    <string name="share_text">Share this via</string>
    <string name="category">category</string>
    <string name="sell">Sell</string>
    <string name="default_user">User</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="zero">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="get_coins">Get coins</string>
    <string name="share">Share</string>
    <string name="offers_made">Offers made</string>
    <string name="username">Username</string>
    <string name="empty" />
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="myCity">My City</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="privateProfile">Private Profile</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="selectBirthday">Please select your birthday</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changePassword">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="dataprivacy"><![CDATA[Data & Privacy Settings]]></string>
    <string name="accountSettings">Account Settings</string>
    <string name="listing_helper">What are you listing today?</string>
    <string name="listing_helper_subtext">Photos are shown in your listing in the order you pick</string>
</resources>
