<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp"
        tools:targetApi="lollipop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin"
            android:contentDescription="@string/item">

            <RelativeLayout
                android:id="@+id/user_container"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="@dimen/half_margin">

                <ImageView
                    android:id="@+id/user_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle"
                    android:layout_marginEnd="@dimen/half_margin"
                    android:clickable="true"
                    app:srcCompat="@drawable/ic_person" />
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/user_thumbnail"
                    android:textSize="@dimen/small_text_size"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:maxLength="15"
                    tools:text="@string/no_text" />
                <TextView
                    android:id="@+id/date_posted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/user_name"
                    android:textSize="@dimen/small_text_size"
                    tools:text="@string/no_text"
                    android:maxLines="1"
                    android:layout_alignStart="@id/user_name"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_below="@+id/user_container"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/thumbnail"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold"
                tools:text="@string/no_text" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:textSize="@dimen/small_text_size"
                tools:text="@string/no_text" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/grey2"
                android:textSize="@dimen/smaller_text_size"
                tools:text="@string/no_text" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/description"
                android:layout_margin="@dimen/quarter_margin"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivLike"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/quarter_margin"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_favorite_xml" />

                    <TextView
                        android:id="@+id/count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_toEndOf="@id/ivLike"
                        android:textColor="@color/grey2"
                        android:textSize="@dimen/large_text_size"
                        tools:layout_editor_absoluteX="41dp"
                        tools:layout_editor_absoluteY="0dp"
                        tools:text="@string/zero" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|center_vertical">

                    <ImageView
                        android:id="@+id/overflow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_dots" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>